force-app/main/default/objects/OneDrive_Credential__c/OneDrive_Credential__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OneDrive Credential</label>
</CustomObject>