force-app/main/default/objects/OneDrive_Credential__c/fields/access_token4__c.field-meta.xml
<CustomField>
    <fullName>access_token4__c</fullName>
    <label>access_token4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>