force-app/main/default/objects/OneDrive_Credential__c/fields/access_token5__c.field-meta.xml
<CustomField>
    <fullName>access_token5__c</fullName>
    <label>access_token5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>