force-app/main/default/objects/OneDrive_Credential__c/fields/refresh_token__c.field-meta.xml
<CustomField>
    <fullName>refresh_token__c</fullName>
    <label>refresh_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>